--- a/ControleEPIApp/ControleEPIApp/View/PageListar.xaml
+++ b/ControleEPIApp/ControleEPIApp/View/PageListar.xaml
@@ -3,23 +3,25 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ControleEPIApp.View.PageListar">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="FUNCIONÁRIOS" FontSize="40" FontAttributes="Bold" HorizontalOptions="Center"/>
-            <Image Source="FuncionarioListar" Margin="1"/>
-            <ListView x:Name="lsvFuncionarios" ItemSelected="lsvFuncionarios_ItemSelected">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                                <Label Text="{Binding nome}" TextColor="Blue" FontSize="16" FontAttributes="Bold"/>
-                                <Label Text="{Binding epi}" FontSize="16"/>
-                                <Label Text="{Binding data_vencimento}" FontSize="16"/>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </StackLayout>
+        <ScrollView>
+            <StackLayout>
+                <Label Text="FUNCIONÁRIOS" FontSize="40" FontAttributes="Bold" HorizontalOptions="Center"/>
+                <Image Source="FuncionarioListar" Margin="1"/>
+                <ListView x:Name="lsvFuncionarios" HasUnevenRows="True" ItemSelected="lsvFuncionarios_ItemSelected" Margin="15">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                                    <Label Text="{Binding nome,StringFormat='Funcionário: {0}'}" FontSize="16" TextColor="Blue" FontAttributes="Bold"/>
+                                    <Label Text="{Binding epi,StringFormat='Epi: {0}'}" FontSize="16"/>
+                                    <Label Text="{Binding data_vencimento,StringFormat='Data: {0:dd/MM/yyyy}'}" FontSize="16"/>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="btnNovo" Text="Novo" Priority="0" Order="Primary" Clicked="btnNovo_Clicked"/>
