--- a/ControleEPIApp/ControleEPIApp/View/PageCadastrar.xaml
+++ b/ControleEPIApp/ControleEPIApp/View/PageCadastrar.xaml
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ControleEPIApp.View.PageCadastrar">
+             x:Class="ControleEPIApp.View.PageCadastrar" BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout>
             <Image Source="FuncionarioCadastro" Margin="10"/>
+            <Label Text="Matricula" FontSize="Medium" FontAttributes="Bold"/>
+            <Entry x:Name="txtMatricula" Keyboard="Numeric" Placeholder="Digite a matricula do funcionário"/>
             <Label Text="NOME" FontSize="Medium" FontAttributes="Bold"/>
             <Entry x:Name="txtNome" Keyboard="Default" Placeholder="Digite o nome do funcionário"/>
             <Label Text="EPI's" FontSize="Medium" FontAttributes="Bold"/>
