--- a/ControleEPIApp/ControleEPIApp/View/PageListarEPI.xaml
+++ b/ControleEPIApp/ControleEPIApp/View/PageListarEPI.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ControleEPIApp.View.PageListarEPI">
+             x:Class="ControleEPIApp.View.PageListarEPI" BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="EPI's À VENCER" FontSize="24" FontAttributes="Bold" HorizontalOptions="Center"/>
