Fim de Testes e ultimos ajustes 22.03.2024

--- a/ControleEPIApp/ControleEPIApp/View/PageListar.xaml
+++ b/ControleEPIApp/ControleEPIApp/View/PageListar.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ControleEPIApp.View.PageListar" BackgroundColor="White">
+             x:Class="ControleEPIApp.View.PageListar" BackgroundColor="White" Title="Funcionários">
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout>
-                <Label Text="FUNCIONÁRIOS" FontSize="40" FontAttributes="Bold" HorizontalOptions="Center"/>
+            <StackLayout>                
                 <Image Source="FuncionarioListar" Margin="1"/>
                 <ListView x:Name="lsvFuncionarios" HasUnevenRows="True" ItemSelected="lsvFuncionarios_ItemSelected" Margin="15">
                     <ListView.ItemTemplate>
