--- a/ControleEPIApp/ControleEPIApp/View/PageCadastrar.xaml
+++ b/ControleEPIApp/ControleEPIApp/View/PageCadastrar.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ControleEPIApp.View.PageCadastrar" BackgroundColor="White">
+             x:Class="ControleEPIApp.View.PageCadastrar" BackgroundColor="White" Title="Cadastro de Entrega">
     <ContentPage.Content>
         <StackLayout>
             <Image Source="FuncionarioCadastro" Margin="10"/>
